--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="@string/card_alamat"
+        android:hint="@string/etcard_alamat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvpegawaialamat"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="@string/card_nohp"
+        android:hint="@string/etcard_nohp"
         android:maxLength="14"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="@string/text_cabang"
+        android:hint="@string/etcard_cabang"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvpegawaicabang"
