--- a/app/src/main/res/layout/activity_tambah_tambahan.xml
+++ b/app/src/main/res/layout/activity_tambah_tambahan.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="@string/namatambahan"
+        android:hint="@string/etnamatambahan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvtambahannama"
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="@string/harga"
+        android:hint="@string/etharga"
         android:maxLength="14"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
