--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#000000" /> <!-- Warna garis tepi -->
+        android:color="#673AB7" /> <!-- Warna garis tepi -->
     <corners android:radius="12dp" /> <!-- Sudut melengkung -->
     <padding
         android:left="10dp"
