--- a/app/src/main/res/layout-land/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout-land/activity_tambah_layanan.xml
@@ -14,7 +14,6 @@
         android:text="@string/tambahlayanan"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:layout_marginTop="50dp"
         tools:ignore="MissingConstraints"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +23,8 @@
         android:id="@+id/tvlayanannama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="30dp"
         android:text="@string/namalayanan"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,22 +33,22 @@
 
     <EditText
         android:id="@+id/etlayanannama"
-        android:layout_width="350dp"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/text_namalengkap"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvlayanannama"
+        app:layout_constraintStart_toEndOf="@+id/tvlayanannama"
+        app:layout_constraintTop_toBottomOf="@+id/tvlayananjudul"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/tvlayananharga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="30dp"
         android:text="@string/harga"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,23 +57,23 @@
 
     <EditText
         android:id="@+id/etlayananharga"
-        android:layout_width="350dp"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="90dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/etharga"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvlayananharga"
+        app:layout_constraintStart_toEndOf="@+id/tvlayananharga"
+        app:layout_constraintTop_toBottomOf="@+id/etlayanannama"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/tvlayanancabang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="30dp"
         android:text="@string/text_cabang"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,24 +82,22 @@
 
     <EditText
         android:id="@+id/etlayanancabang"
-        android:layout_width="350dp"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="78dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/etcard_cabang"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvlayanancabang"
+        app:layout_constraintStart_toEndOf="@+id/tvlayanancabang"
+        app:layout_constraintTop_toBottomOf="@+id/etlayananharga"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/btlayanansimpan"
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:text="@string/button_simpan"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etlayanancabang"
