--- a/app/src/main/res/layout/dialogmod_pembayaran.xml
+++ b/app/src/main/res/layout/dialogmod_pembayaran.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
-    android:background="@android:color/white">
+    android:padding="24dp">
 
     <!-- Judul -->
     <TextView
         android:id="@+id/tvJudulpembayaran"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pembayaran"
+        android:text="@string/pembayaran"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,9 +20,9 @@
     <!-- Subjudul -->
     <TextView
         android:id="@+id/tvSubjudulpembayaran"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pilih Metode Pembayaran"
+        android:text="@string/PilihMetodePembayaran"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="12dp"
@@ -59,13 +58,14 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
             android:clickable="true"
+            app:cardCornerRadius="12dp"
             app:cardBackgroundColor="#F44336">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Bayar Nanti"
+                android:text="@string/bayarnanti"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:padding="16dp"
@@ -78,13 +78,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            app:cardCornerRadius="12dp"
             app:cardBackgroundColor="#FFC107">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Tunai"
+                android:text="@string/Tunai"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:padding="16dp"
@@ -97,6 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            app:cardCornerRadius="12dp"
             app:cardBackgroundColor="#FF9800">
 
             <TextView
@@ -116,6 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            app:cardCornerRadius="12dp"
             app:cardBackgroundColor="#03A9F4">
 
             <TextView
@@ -135,6 +138,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            app:cardCornerRadius="12dp"
             app:cardBackgroundColor="#4CAF50">
 
             <TextView
@@ -154,6 +158,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
+            app:cardCornerRadius="12dp"
             app:cardBackgroundColor="#9C27B0">
 
             <TextView
@@ -173,8 +178,8 @@
         android:id="@+id/tvBatal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Batal"
-        android:textColor="#666666"
+        android:text="@string/batal"
+        android:textColor="#FD1313"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/paymentOptionsLayoupembayarant"
         app:layout_constraintEnd_toEndOf="parent" />
