--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,6 +138,7 @@
 
                 <!-- Icon 3 -->
                 <LinearLayout
+                    android:id="@+id/laporan_menu"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
