--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -176,6 +176,8 @@
             tools:ignore="MissingConstraints">
 
             <LinearLayout
+
+                android:id="@+id/laporan_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
